Bug 450336 - url bar has bad icon rendering on highdpi
Summary: url bar has bad icon rendering on highdpi
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-15 19:42 UTC by Nicolas Fella
Modified: 2022-02-17 05:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (81.20 KB, image/png)
2022-02-15 19:42 UTC, Nicolas Fella
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2022-02-15 19:42:28 UTC
With 200% scaling the icons in the new url bar look pixellated. See screenshot

SOFTWARE/OS VERSIONS
KDE Frameworks Version: master 
Qt Version: 5.15-kde
Comment 1 Nicolas Fella 2022-02-15 19:42:47 UTC
Created attachment 146788 [details]
Screenshot
Comment 2 Christoph Cullmann 2022-02-15 20:43:38 UTC
True, e.g. easy to see with

export QT_SCALE_FACTOR=2

Thought on first glance don't see why, given all stuff is just a QIcon...
Comment 3 Waqar Ahmed 2022-02-16 06:02:40 UTC
@nicholas @christoph

How do the icons for files look in the list view that opens when you click on a directory?
Comment 4 Nicolas Fella 2022-02-16 12:14:09 UTC
They look broken too
Comment 5 Waqar Ahmed 2022-02-16 12:44:52 UTC
Pretty much all icons in all our itemviews are broken since https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/57

It should be affecting other apps as well, not sure why no on has noticed yet.
Comment 6 Bug Janitor Service 2022-02-16 19:14:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kiconthemes/-/merge_requests/58
Comment 7 Waqar Ahmed 2022-02-17 05:21:58 UTC
Git commit 38175e5f79171bb04b237085a86ca7cbf428eabf by Waqar Ahmed.
Committed on 17/02/2022 at 05:20.
Pushed by waqar into branch 'master'.

Fix pixelated icons in item views

We need to scale the size before creating the pixmap.

M  +1    -1    src/kiconengine.cpp

https://invent.kde.org/frameworks/kiconthemes/commit/38175e5f79171bb04b237085a86ca7cbf428eabf