Fix pixelated icons in item views

We need to scale the size before creating the pixmap.

BUG: 450336